			   XPCE ChangeLog
			   ==============

VERSION 6.1.8, distributed with SWI-Prolog 5.1.8
================================================

* ADDED: library(pce_identifier_item) providing the class identifier_item.

* FIXED: tool_bar->activate if there are `gaps' in the toolbar

* ADDED: PceEmacs cross-references now deals with the :- meta_predicate
  declaration.


VERSION 6.1.7, distributed with SWI-Prolog 5.1.7
================================================

* ENHANCED: indirection in class editable_text to make it easier to modify
  edit-mode feedback in subclasses.

* FIXED: Bug #14: printer handling for PceDraw (Lourens van der Meij).

* FIXED: Object-reference counting problem that may cause colour objects
  to be garbage collected early.  (Lourens van der Meij).

* ADDED: PceEmacs: provisional RDF, RDFS and OWL modes to insert the lengthy
  header and draw a triple diagram from small files.

* PceEmacs: added .owl to map to xml-mode

VERSION 6.1.6, distributed with SWI-Prolog 5.1.6
================================================

* FIXED: `toc_node->font' from the library(pce_toc).  Filip Prochazka

* FIXED: Balloon help in modal windows.  After demo program from Juergen Repp.

* FIXED: Guitracer: goal-expansion loop.

* ENHANCED: image->draw_in to avoid redrawing the whole graphical if only
  part overlaps the image.
	
* ADDED: Support for writing PostScript colour images.

* ADDED: Windows version: load .ICO data from streams and therefore from
  SWI-Prolog resources.  With help from	Fabien Todescato.  Thanks.

* FIXED: Handling `default' argument in @finder<-get_file.
  (Lourens van der Meij).


VERSION 6.1.5, distributed with SWI-Prolog 5.1.5
================================================

* FIXED: `@pce->show-console' to deal with new SWI-Prolog console code.

* PORT: Upgraded XPCE configure suite to use autoconf 2.5.3 (distributed
  with SuSE 8.1).  Configure gives some warnings on cd to non-existent
  directories, but appears to work fine.
